--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body, html {
+    padding: 0;
+    height: 100%;
+    background-color: #a4c4ff;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
