--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
 }
 
 body, html {
-    padding: 0;
-    height: 100%;
+    /* padding: 0; */
+    /* height: 100%; */
     background-color: #a4c4ff;
 }
 
